Styled dropdown menu, added event image slider container, and fixed spacing for main product stage.

--- a/src/Components/productPageStyles.css
+++ b/src/Components/productPageStyles.css
@@ -10,6 +10,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 50px;
+    margin: 100px 0px 100px 0px;
 }
 
 .img-product {
@@ -64,10 +65,33 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    justify-content: left;
+    align-items: left;
+    text-align: left;
     background-color: rgb(240, 240, 240);
     cursor: pointer;
     transition: background-color 0.3s ease;
+}
+
+.drop-item {
+    width: 100%;
+    padding: 10px;
+    border-bottom: 1px solid rgb(199, 199, 199);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.event-photos {
+    width: 100%;
+    margin-top: 50px;
+    padding: 20px;
+    /* border: 2px solid rgb(199, 199, 199); */
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.event-photos h2 {
+    margin: 50px 0px 50px 0px;
 }
